refatoração removerRecursaoSimboloInicial Gramatica.toString substitui2por1